# bitgit

./: .gitignore  BUILD.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  README.md  SECURITY.md  SESSION_NOTES.md  create-icon.cjs  create-proper-icon.cjs  create-square-icon.py  index.html  make-ico.cjs  make-square-icon.js  make-valid-ico.cjs  package-lock.json  package.json  releases.json  temp.php  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: HOW_TO_USE.md  INTEGRATION_COMPLETE.md  NEXT_STEPS.md  PROGRESS.md  SETUP_COMPLETE.md  START_HERE.md
git-service/: package-lock.json  package.json  tsconfig.json
git-service/src/: git-operations.ts  github-api.ts  index.ts  ipc-server.ts  types.ts
scripts/: build-msi.cmd  build-msi.ps1  create-signing-cert-fixed.ps1  create-signing-cert.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_settings.rs  commands.rs  credentials.rs  git_service.rs  main.rs  models.rs  project_cache.rs  scanner.rs
src/components/: AddProjectModal.tsx  AnalyticsDashboard.tsx  CommitModal.tsx  CreateRepoModal.tsx  Dashboard.tsx  ErrorBoundary.tsx  LinkGitHubModal.tsx  LinkLocalModal.tsx  ProjectCard.tsx  ProjectDetails.tsx  SettingsModal.tsx  ValidationWarningModal.tsx
src/stores/: useAppStore.ts
src/types/: index.ts
website/: App.tsx  index.html  metadata.json  package.json  types.ts
website/components/: FeatureGrid.tsx  MockInterface.tsx
